fixed paragraph layout problems.

--- a/modules/html-helper/style-paragraph-layout.css
+++ b/modules/html-helper/style-paragraph-layout.css
@@ -1,8 +1,24 @@
 /* paragraph layout */
+a.verse {
+  display: inline-block;
+  text-indent: 0em;
+  text-align: right;
+  min-width: 1em;
+}
+
 p.p {
   text-indent: 2em;
 }
 
-p.q, p.q1, p.q2, p.tr, p.tc1 {
-  text-indent: 2em;
+p.q, p.q1, p.q2, p.tr, p.tc1, p.m {
+  text-indent: 3em;
+}
+
+p.q > .verse-line,
+p.q1 > .verse-line,
+p.q2 > .verse-line,
+p.tr > .verse-line,
+p.tc1 > .verse-line,
+p.m > .verse-line {
+  margin-left: -1em;
 }
